Fix Margin Spacing

--- a/Skinny Window Header/custom_icons.css
+++ b/Skinny Window Header/custom_icons.css
@@ -53,7 +53,7 @@
     -webkit-mask-image: url(/themes_custom/Skinny%20Window%20Header/icons/tv-solid.svg);
     width: 0px;
     min-width: 18px; 
-    margin-right: 8px;
+    margin-right: 16px;
     margin-top: 1px;
 }
 
